package entity.base;

public interface Choppable {
    void chop();
    boolean isChopped();
}
