package entity.base;

public interface Updatable {
}
