@startuml
class entity.counter.Bin {
+ void interact(Player)
}

abstract class entity.base.Container {
- ArrayList<Ingredient> content
- int maxCapacity
- int capacity
+ {abstract}boolean verifyContent(Ingredient)
+ boolean addContent(Ingredient)
+ ArrayList<Ingredient> getContent()
+ void clearContent()
+ boolean isEmpty()
+ void transferContent(Container)
+ void setContent(ArrayList<Ingredient>)
+ String toString()
+ int getMaxCapacity()
+ void setMaxCapacity(int)
+ int getCapacity()
+ void setCapacity(int)
}


class entity.container.Dish {
- int dirty
+ boolean isDirty()
+ boolean verifyContent(Ingredient)
+ void clean(int)
+ String toString()
+ int getDirty()
+ void setDirty(int)
}


class entity.ingredient.Egg {
- int cookedPercentage
+ void cook()
+ boolean isBurnt()
+ String toString()
+ int getCookedPercentage()
+ void setCookedPercentage(int)
}


interface entity.base.Updatable {
~ void update()
}

class entity.container.Pan {
+ boolean verifyContent(Ingredient)
+ void cook()
}

interface entity.base.Cookable {
~ void cook()
~ boolean isBurnt()
}

class entity.counter.Crate {
- String myIngredient
+ void interact(Player)
+ String getMyIngredient()
+ void setMyIngredient(String)
}


class entity.counter.Stove {
+ void interact(Player)
+ void update()
}

class entity.ingredient.Bread {
}
abstract class entity.base.Ingredient {
- boolean isEdible
+ boolean isEdible()
+ void setEdible(boolean)
}


class entity.counter.DishWasher {
+ void interact(Player)
+ void update()
}

class entity.ingredient.Lettuce {
- boolean chopState
+ void chop()
+ boolean isChopped()
}


interface entity.base.Choppable {
~ void chop()
~ boolean isChopped()
}

class entity.counter.Counter {
- String name
- Item placedContent
+ Item getPlacedContent()
+ void setPlacedContent(Item)
+ boolean isPlacedContentEmpty()
+ void interact(Player)
+ String getName()
+ void setName(String)
+ String toString()
}


class entity.counter.ChoppingBoard {
+ void interact(Player)
}

class entity.ingredient.Meat {
- boolean chopState
- int cookedPercentage
+ void chop()
+ void cook()
+ boolean isBurnt()
+ String toString()
+ int getCookedPercentage()
+ void setCookedPercentage(int)
+ boolean isChopped()
}


abstract class entity.base.Item {
- String name
+ String getName()
+ void setName(String)
+ int hashCode()
+ boolean equals(Object)
+ String toString()
}




entity.counter.Counter <|-- entity.counter.Bin
entity.base.Item <|-- entity.base.Container
entity.base.Container <|-- entity.container.Dish
entity.base.Cookable <|.. entity.ingredient.Egg
entity.base.Ingredient <|-- entity.ingredient.Egg
entity.base.Container <|-- entity.container.Pan
entity.counter.Counter <|-- entity.counter.Crate
entity.base.Updatable <|.. entity.counter.Stove
entity.counter.Counter <|-- entity.counter.Stove
entity.base.Ingredient <|-- entity.ingredient.Bread
entity.base.Item <|-- entity.base.Ingredient
entity.base.Updatable <|.. entity.counter.DishWasher
entity.counter.Counter <|-- entity.counter.DishWasher
entity.base.Choppable <|.. entity.ingredient.Lettuce
entity.base.Ingredient <|-- entity.ingredient.Lettuce
entity.counter.Counter <|-- entity.counter.ChoppingBoard
entity.base.Choppable <|.. entity.ingredient.Meat
entity.base.Cookable <|.. entity.ingredient.Meat
entity.base.Ingredient <|-- entity.ingredient.Meat
@enduml